tests/fixtures/multi_module/valid/linear_chain/foundation.furqan
bismillah Foundation {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: foundation_scope
    not_scope: nothing_excluded
}

fn placeholder() -> Integrity {
    return Integrity
}
