tests/fixtures/multi_module/invalid/long_cycle/c.furqan
bismillah LCC {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: third
    not_scope: nothing_excluded
}

tanzil c_deps {
    depends_on: LCA
}

fn placeholder() -> Integrity {
    return Integrity
}
